0.77 06feb2020
* revert the rtl_433 to rtl changes
* update identifier for Ambient Weather F007TH

0.76 04feb2020
* use rtl instead of rtl_433 to match rtl_433 project change
* stop using -G in default command, since it is now officially just for testing
* encourage use of -R instead of -G, as requested by rtl_433 project

0.75 02jan2020
* fixed unit system bug in OSWGR800 packet.  thanks to user olivier!

0.74 22dec19
* added support for TS-FT002.  thanks to user splobsterman!

0.73 14dec19
* added support for acurite atlas packets.  thanks to user Chris Morris!

0.72 02dec19
* added support for TFATwinPlus303049.  thanks to user weezul!
* added support for acurite rain 899.  thanks to user rknobbe!
* convert units for rain in fine offset 1080/3080 packets

0.71 01dec19
* added support for HolmanWS5029. thanks to user rmounce!
* changed labels for pm10 from pm10_ug_m3 to pm10_0_ug_m3
* added support for rain_mm, wind_speed_mph, wind_direction, wind_gust in
   Hideki rain and wind packets.  thanks to user giuseppe saia/farmabeps,
   and user andylittle.  fixes issue #67
* change acurite 986 parse text to match parse json.  thanks to andylittle!
* added support for OSUVR128.  thanks to user sirrated!
* added support for unsupported acurite tower and 5in1 packets that include
   rssi, frequency, and snr.  thanks to user networkname!  issue #59
* added support for FOWH5 sensors.  thanks to user starvald!  issue #65

0.70 27aug19
* ported to Python 3

0.64 01may19
* added support for OS THR128. thanks to user douglassd!

0.63 23apr19
* added support for WT0124 pool sensor

0.62 08apr19
* added support for WH32B sensor.  thanks to user steepleian!

0.61 11mar19
* fix packet name for WH31E

0.60 06mar19
* deal with rtl_433 output changes to OSBHTR968 packets

0.59 03mar19
* report packet that resulted in unmapped lines.  thanks to user wjcarpenter!
* provide better feedback when rtl_433 not found
* formatting changes to keep PEP happy

0.58 15feb19